<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/actor4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:onClick="onClickActors4"
            app:circularflow_radiusInDP="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="243dp"
            android:layout_height="24dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="7dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:text="@string/heading"
            android:textAppearance="@style/heading"
            android:textColor="#D8D8D8"
            app:layout_constraintBottom_toTopOf="@+id/actor2"
            app:layout_constraintStart_toStartOf="@+id/actor1" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:alpha="0.6"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/avengers_storyline"
            android:textAppearance="@style/Description"
            app:layout_constraintBottom_toTopOf="@+id/heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/actor2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:onClick="onClickActors2"
            app:circularflow_radiusInDP="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/actor3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855" />

        <TextView
            android:id="@+id/actor1_name"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:onClick="onClickActors1"
            android:text="@string/robert_down"
            android:textAppearance="@style/robert_down"
            app:layout_constraintEnd_toEndOf="@+id/actor1"
            app:layout_constraintStart_toStartOf="@+id/actor1"
            app:layout_constraintTop_toBottomOf="@+id/actor1" />

        <ImageView
            android:id="@+id/actor3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="false"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:onClick="onClickActors3"
            app:circularflow_radiusInDP="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/actor4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855" />

        <TextView
            android:id="@+id/actor2_name"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:onClick="onClickActors2"
            android:text="@string/chris_evans"
            android:textAppearance="@style/robert_down"
            app:layout_constraintEnd_toEndOf="@+id/actor2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/actor2"
            app:layout_constraintTop_toBottomOf="@+id/actor2" />

        <View
            android:id="@+id/backImg"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/avengers_backimg"
            app:layout_constraintBottom_toTopOf="@+id/film_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/mask3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/back_grad"
            app:layout_constraintBottom_toBottomOf="@+id/backImg"
            app:layout_constraintEnd_toEndOf="@+id/backImg"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/backImg"
            app:layout_constraintTop_toTopOf="@+id/backImg"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/actor1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:onClick="onClickActors1"
            app:circularflow_radiusInDP="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/actor2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855" />

        <TextView
            android:id="@+id/actor3_name"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:onClick="onClickActors3"
            android:text="@string/mark_ruffalo"
            android:textAppearance="@style/robert_down"
            app:layout_constraintEnd_toEndOf="@+id/actor3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/actor3"
            app:layout_constraintTop_toBottomOf="@+id/actor3" />

        <TextView
            android:id="@+id/tvDescriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/tvDescriptionTitle"
            android:textAppearance="@style/tvDescriptionTitle"
            app:layout_constraintBottom_toTopOf="@+id/tvDescription"
            app:layout_constraintEnd_toEndOf="@+id/tvDescription"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvDescription" />

        <TextView
            android:id="@+id/actor4_name"
            android:layout_width="80dp"
            android:layout_height="32dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="6dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="2sp"
            android:onClick="onClickActors4"
            android:text="@string/chris_hemsworth"
            android:textAppearance="@style/robert_down"
            app:layout_constraintEnd_toEndOf="@+id/actor4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/actor4"
            app:layout_constraintTop_toBottomOf="@+id/actor4" />

        <View
            android:id="@+id/star_icon"
            android:layout_width="13dp"
            android:layout_height="12dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/star_icon"
            android:onClick="setOnClickRate"
            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/star_icon2"
            android:layout_width="13dp"
            android:layout_height="12dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/star_icon"
            android:onClick="setOnClickRate"
            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionTitle"
            app:layout_constraintStart_toEndOf="@+id/star_icon" />

        <View
            android:id="@+id/star_icon3"
            android:layout_width="13dp"
            android:layout_height="12dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/star_icon"
            android:onClick="setOnClickRate"
            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionTitle"
            app:layout_constraintStart_toEndOf="@+id/star_icon2" />

        <View
            android:id="@+id/star_icon4"
            android:layout_width="13dp"
            android:layout_height="12dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/star_icon"
            android:onClick="setOnClickRate"
            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionTitle"
            app:layout_constraintStart_toEndOf="@+id/star_icon3" />

        <View
            android:id="@+id/star_icon5"
            android:layout_width="13dp"
            android:layout_height="12dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/star_icon"
            android:backgroundTint="@color/gray_star_review"
            android:onClick="setOnClickRate"
            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionTitle"
            app:layout_constraintStart_toEndOf="@+id/star_icon4" />

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/reviews"
            android:textAppearance="@style/reviews"
            app:layout_constraintBottom_toTopOf="@+id/tvDescriptionTitle"
            app:layout_constraintStart_toEndOf="@+id/star_icon5" />

        <TextView
            android:id="@+id/film_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/avengers_tags"
            android:textAppearance="@style/tags_style"
            app:layout_constraintBottom_toTopOf="@+id/star_icon2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/star_icon" />

        <TextView
            android:id="@+id/film_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="0sp"
            android:text="@string/avengers_name"
            android:textAppearance="@style/film_name_style"
            app:layout_constraintBottom_toTopOf="@+id/film_tag"
            app:layout_constraintEnd_toEndOf="@+id/film_tag"
            app:layout_constraintStart_toStartOf="@+id/film_tag" />

        <TextView
            android:id="@+id/film_age"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="0sp"
            android:textAppearance="@style/film_name_style"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/film_name"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/btBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            app:layout_constraintBottom_toTopOf="@+id/film_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:src="@drawable/back" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

